# compositor

./: .gitignore  LICENSE  Makefile  default.supp  main.c  meson.build  xdg-shell-protocol.h  xdg-shell-unstable-v6-protocol.h
include/: wm_keyboard.h  wm_output.h  wm_pointer.h  wm_seat.h  wm_server.h  wm_shell.h  wm_shell_xdg.h  wm_shell_xdg_v6.h  wm_shell_xwayland.h  wm_surface.h  wm_window.h
src/: main.c  wm_keyboard.c  wm_output.c  wm_pointer.c  wm_seat.c  wm_server.c  wm_shell_xdg.c  wm_shell_xdg_v6.c  wm_shell_xwayland.c  wm_surface.c  wm_window.c
